kong-api-gateway/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grade-submission
 namespace: grade-demo
 annotations:
   konghq.com/strip-path: "false"
   konghq.com/plugins: grade-demo-auth-plugin, grade-demo-ratelimit   # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"  
spec:
 ingressClassName: kong
 rules:
   - http:
       paths:
         - path: /grades
           pathType: Prefix
           backend:
             service:
               name: grade-submission-api # Name of your K8s Service
               port:
                 number: 3000    # Port exposed by your Service
